# kura-indexer-nyaa

./: .gitignore  Cargo.toml  Dockerfile  README.md  backend.Dockerfile  frontend.Dockerfile  mirror.Dockerfile
backend/: .dockerignore  .gitignore  Cargo.toml  event_schema.sql  schema.sql
backend/src/: cache.rs  client.rs  data.rs  indexer.rs  main.rs  periodic.rs  url.rs
backend/src/frontend/: api.rs  mod.rs  static_files.rs  types.rs
backend/src/html/: list.rs  mod.rs  view.rs
backend/src/rss/: mod.rs
frontend/: .env  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts  types.ts
frontend/src/components/: footer.tsx  header.tsx  search.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  navigation.tsx
frontend/src/components/search/: search-form.tsx
frontend/src/components/torrent/: torrent-pagination.tsx  torrent-table.tsx
frontend/src/components/ui/: category-cell.tsx  date-cell.tsx  title-cell.tsx
frontend/src/lib/: query.ts  types.ts
frontend/src/routes/: __root.tsx  _list.index.tsx  _list.tsx  _proxy.tsx  health.tsx  index.tsx  stats.tsx  view.$id.tsx
frontend/src/routes/_proxy/$mirror/: index.tsx  view.$id.tsx
indexer/: Cargo.toml
indexer/src/: cache.rs  cli.rs  client.rs  main.rs  mirror.rs  rate_limiter.rs  request_tracker.rs
mirror/: Cargo.toml
mirror/frontend/: package.json
mirror/frontend/src/: routeTree.gen.ts
mirror/frontend/src/components/: error.tsx  header.tsx  navigation.tsx  search.tsx  theme-provider.tsx
mirror/frontend/src/components/ui/: category-cell.tsx  number-cell.tsx  size-cell.tsx  title-cell.tsx
mirror/frontend/src/lib/: query.ts  types.ts  url.ts
mirror/frontend/src/routes/: __root.tsx  health.tsx  index.tsx
mirror/frontend/src/routes/_proxy/$mirror/: index.tsx  user.$id.tsx  view.$id.tsx
mirror/frontend/src/routes/proxy/$mirror/: index.tsx  user.$id.tsx  view.$id.tsx
mirror/src/: cache.rs  cli.rs  client.rs  main.rs  rate_limiter.rs  request_tracker.rs
mirror/src/api/: health.rs  mod.rs
mirror/src/api/mirror/: list.rs  magnet.rs  mod.rs  view.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/list/: html.rs  mod.rs  rss.rs
parser/src/view/: html.rs
src/: indexer.rs  main.rs  periodic.rs
src/frontend/: types.rs
src/html/: list.rs  mod.rs  view.rs
