[package]
name = "kura-indexer-nyaa"
version = "0.1.0"
edition = "2024"

[dependencies]
kura-indexer = { git = "https://github.com/Julgodis/kura-indexer.git", features = ["axum"] }
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
toml = "0.8.20"
anyhow = "1.0.97"
reqwest = { version = "0.12.15", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
nyaa-parser = { path = "../parser" }
tracing = "0.1.41"
humantime-serde = "1.1.1"
serde_urlencoded = "0.7.1"
tower-http = { version = "0.6.2", features = ["cors", "trace", "compression-full", "fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
rusqlite = { version = "0.34.0", features = ["bundled","chrono"] }
