[package]
name = "nyaa-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["cors", "trace", "compression-full", "fs"] }
chrono = { version = "0.4.40", features = ["serde"] }
