[package]
name = "nyaa-mirror"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
humantime-serde = "1.1.1"
nyaa-parser = { path = "../parser" }
reqwest = { version = "0.12.15", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
rusqlite = { version = "0.34.0", features = ["bundled","chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["cors", "trace", "compression-full", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
